2006-06-27 Frode Lindeijer <f.lindeijer@gmail.com>
	
	* /tmw/trunk/data/graphics/sprites/player_male_base.png:
	Fixed transparency issue with the north punching frames

2006-06-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/net/messagein.cpp: Fixed the readString method (synchronized
	with the server version by Guillaume Melquiond).

2006-06-21  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/sprites/Makefile.am,
	data/graphics/sprites/monster11.png,
	data/graphics/sprites/monster17.png: Fixed attack animation of monster
	11 and added a new monster.
	* data/graphics/sprites/Makefile.am,
	data/graphics/sprites/player_female_base.png, src/being.cpp,
	src/being.h, src/gui/char_select.cpp, src/gui/char_select.h,
	src/gui/playerbox.cpp, src/gui/playerbox.h, src/gui/register.cpp,
	src/main.cpp, src/net/beinghandler.cpp, src/net/charserverhandler.cpp,
	src/player.cpp: Added female players.

2006-06-19  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/monster16.png: added the little pink monster

2006-05-22  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/tiles/icecave.png, data/graphics/tiles/Makefile.am,
	data/maps/Makefile.am, data/maps/new_10-1.tmx.gz,
	data/maps/new_11-1.tmx.gz, data/maps/new_4-1.tmx.gz,
	data/maps/new_5-1.tmx.gz, src/resources/itemmanager.cpp: A bunch of
	updates to the world and disabled art and type xml parser checks since
	they're not used.

2006-05-21  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev: Updated dev-cpp project file.

2006-05-17  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/sprites/npcs.png, data/graphics/tiles/Makefile.am,
	data/graphics/snow_building.png, data/graphics/tiles/snowset.png,
	data/maps/Makefile.am, data/maps/new_11-1.tmx.gz: New NPCs, new snow
	tiles and village.

2006-05-15  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/gui/item_amount.cpp: Set slider range to the real values instead